<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_api_endpoint_name">API Endpoint</string>
    <string name="pref_title_client_id_name">Client Id</string>
    <string name="pref_title_account_id_name">Account Id</string>

    <string name="pref_default_api_endpoint_name">stage</string>
    <string name="pref_default_client_id_name">171482</string>
    <string name="pref_default_account_id_name">1170640190</string>
</resources>
