<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="api_endpoint_text"
        android:title="@string/pref_title_api_endpoint_name"
        android:defaultValue="@string/pref_default_api_endpoint_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="client_id_text"
        android:title="@string/pref_title_client_id_name"
        android:defaultValue="@string/pref_default_client_id_name"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="account_id_text"
        android:title="@string/pref_title_account_id_name"
        android:defaultValue="@string/pref_default_account_id_name"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />



</PreferenceScreen>
